@@ -222,7 +222,7 @@ Playlist.prototype.remove = function (uid) {
     var item = self.items.find(uid);
     if (item && self.items.remove(uid)) {
         if (item === self.current) {
-            setImmediate(function () { self._next(); });
+            self._next();
         }
         return true;
     } else {
